Config. Database and Create structure  for data migration

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "AutomovelDB": "Server=DESKTOP-GQJRR1P; Database=PlacaCarrosDB;User Id=sa;Password=k2q0nvsEkSM;TrustServerCertificate=True;"
     }
-  },
-  "AllowedHosts": "*"
 }
