Configuration to use `Elastic` and use of `Docker Compose`

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,11 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "AutomovelDB": "Server=DESKTOP-GQJRR1P; Database=PlacaCarrosDB;User Id=sa;Password=k2q0nvsEkSM;TrustServerCertificate=True;"
+    },
+    "ElasticApm": {
+        "SecretToken": "9846afcf-ce3f-4aa8-b759-329eb4708ddc",
+        "ServerUrls": "http://localhost:8200", //Set custom APM Server URL (default: http://localhost:8200)
+        "ServiceName": "ConsultaPlacasCarro", //allowed characters: a-z, A-Z, 0-9, -, _, and space. Default is the entry assembly of the application
+        "Environment": "dev" // Set the service environment
     }
 }
