Save generated plates and validating existence

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "AutomovelDB": "Server=DESKTOP-GQJRR1P; Database=PlacaCarrosDB;User Id=sa;Password=k2q0nvsEkSM;TrustServerCertificate=True;"
+        "AutomovelDB": "Server=DESKTOP-GQJRR1P; Database=PlacasCarrosDB;User Id=sa;Password=k2q0nvsEkSM;TrustServerCertificate=True;"
     },
     "ElasticApm": {
         "SecretToken": "9846afcf-ce3f-4aa8-b759-329eb4708ddc",
